deploy&start&stop is OK
